# abakit

./: .gitignore  .setup.py.swp  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  version.py
.github/workflows/: deploy-docs-actions.yml
dev/: environment.yml
docs/: conf.py  index.rst
docs/example/: landmark-registration-affine.ipynb
docs/source/: conf.py
src/abakit/: .gitignore  parameters.yaml
src/abakit/atlas/: Assembler.py  Atlas.py  BrainMerger.py  BrainStructureManager.py  CustomAtlasVolumeMaker.py  VolumeMaker.py  VolumeToContour.py
src/abakit/atlas/save_folder/: build_foundationbrain_aligned_data.py  merge_brains.py  (+3 more)
src/abakit/lib/: Brain.py  CZIManager.py  FileLocationManager.py  SqlController.py  Transformation.py  UrlGenerator.py  annotation_layer.py  logger.py  python_util.py  utilities_alignment.py  utilities_bioformats.py  utilities_clean.py  utilities_create_alignment.py  utilities_create_masks.py  utilities_cvat_neuroglancer.py  utilities_downsampling.py  utilities_elastics.py  utilities_histogram.py  utilities_mask.py  utilities_meta.py  utilities_neuroglancer_image.py  utilities_normalized.py  utilities_preps.py  utilities_process.py  utilities_registration.py  utilities_web.py
src/abakit/model/: annotation_points.py  annotation_session.py
src/abakit/neuroglancer/: AnnotationLayer.py
src/abakit/registration/: algorithm.py  transform.py  utilities.py
src/abakit/transfroms/: Transformation.py
src/abakit/utilities/: shell_tools.py  utilities_mask.py  utilities_process.py~
tests/: __init__.py  test_sample.py
(+27 files in other folders)
