# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html
# https://setuptools.readthedocs.io/en/latest/userguide/package_discovery.html#package-discovery

[metadata]
name = abakit
version = 0.0.1

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    pytorch3d
    torch

[options.packages.find]
where = src
